# demo-data-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  sbom.cdx.json  settings.env.template
.devcontainer/: Dockerfile  devcontainer.json
src/: graph.py  main.py
src/agents/: __init__.py
src/agents/chart_summarizer/: __init__.py  chart_summarizer.py  chart_summarizer_node.py  prompts.py
src/agents/common/: prompts.py
src/agents/executor/: __init__.py  executor.py  executor_node.py  prompts.py
src/agents/planner/: __init__.py  planner.py  planner_node.py  prompts.py
src/agents/synthesizer/: __init__.py  prompts.py  synthesizer.py  synthesizer_node.py
src/agents/visualizer/: __init__.py  prompts.py  tools.py  visualizer.py  visualizer_node.py
src/agents/web_researcher/: __init__.py  prompts.py  web_researcher.py  web_researcher_node.py
src/core/: errors.py  logger.py  settings.py
src/exercises/solutions/: ex1_run_graph_solution.ipynb  ex2_create_my_graph_solution.ipynb  ex3_advanced_addons_solution.ipynb  ex3_observability_solution.ipynb
src/exercises/tasks/: ex0_setup.ipynb  ex1_run_graph.ipynb  ex2_create_my_graph.ipynb  ex3_advanced_addons.ipynb  ex3_explore_traces.ipynb  ex3_observability.ipynb
src/models/: agents.py  description.py  prompts.py  state.py
src/prompt_management/: register_prompt.ipynb  registry.py
src/prompt_management/chart_summarizer/: system_prompt.py
src/prompt_management/executor/: system_prompt.py  user_prompt.py
tests/: conftest.py
tests/models/: test_state.py
(+21 files in other folders)
