[project]
name = "demo-data-agent"
version = "0.0.2"
description = "Demo data agent with a multi-agent architecture designed to answer user's questions."
authors = [
    { name = "Cassandra Milbradt <cassandra.milbradt@d-fine.com>" },
    { name = "Anne Sehnal <anne.sehnal@d-fine.com>" },
]
dependencies = [
    "matplotlib>=3.10.6",
    "pyarrow>=21.0.0",
    "pydantic-ai>=1.39.0",
    "pydantic-ai-slim[tavily]>=1.39.0",
    "pydantic-graph>=1.39.0",
    "pydantic>=2.11.9",
    "setuptools>=80.9.0",
    "langfuse>=3.11.2",
]

requires-python = ">= 3.12,<3.13"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.ty.environment]
root = ["./src"]

[tool.uv]
managed = true
package = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "notebook>=7.5.2",
    "ipykernel>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "dirty-equals>=0.11",
]

